src/objects/Obj1__c.object
<CustomObject>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email1</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Experience__c</fullName>
        <label>Experience</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dob__c</fullName>
        <label>dob</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>education__c</fullName>
        <label>education</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mob__c</fullName>
        <label>mob</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>name__c</fullName>
        <label>name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Obj1</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Obj1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Obj1s</pluralLabel>
    <recordTypes>
        <fullName>Old</fullName>
        <active>true</active>
        <label>Old</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>